Implimented ValidateAgentInterface on ValidateAgents, updated servlets, fixed bugs

--- a/MessageEncryptorWebApplication/nbproject/project.properties
+++ b/MessageEncryptorWebApplication/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.MessageEncryptorEJBModule.jar=C:\\Users\\nkamb\\Documents\\NetBeansProjects\\MessageEncryptorEJBModule\\dist\\MessageEncryptorEJBModule.jar
+file.reference.MessageEncryptorEJBModule.jar-1=../MessageEncryptorEJBModule/dist/MessageEncryptorEJBModule.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +44,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.MessageEncryptorEJBModule.jar}
+    ${file.reference.MessageEncryptorEJBModule.jar}:\
+    ${file.reference.MessageEncryptorEJBModule.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -64,13 +66,12 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.preview=true
-javadoc.private=false
+javadoc.private=true
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
