Updated the persistence.xml, cleared bugs, and ensured separation of concerns

--- a/MessageEncryptorWebApplication/nbproject/project.properties
+++ b/MessageEncryptorWebApplication/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
 excludes=
 file.reference.MessageEncryptorEJBModule.jar=C:\\Users\\nkamb\\Documents\\NetBeansProjects\\MessageEncryptorEJBModule\\dist\\MessageEncryptorEJBModule.jar
 file.reference.MessageEncryptorEJBModule.jar-1=../MessageEncryptorEJBModule/dist/MessageEncryptorEJBModule.jar
+file.reference.MessageEncryptorWebApplication.war=dist\\MessageEncryptorWebApplication.war
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +46,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.MessageEncryptorEJBModule.jar}:\
-    ${file.reference.MessageEncryptorEJBModule.jar-1}
+    ${file.reference.MessageEncryptorEJBModule.jar-1}:\
+    ${file.reference.MessageEncryptorWebApplication.war}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
