--- a/MessageEncryptorWebApplication/nbproject/private/private.properties
+++ b/MessageEncryptorWebApplication/nbproject/private/private.properties
@@ -1,5 +1,6 @@
 deploy.ant.properties.file=C:\\Users\\nkamb\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv31525741824.properties
 file.reference.MessageEncryptorEJBModule.jar=C:\\Users\\nkamb\\Documents\\NetBeansProjects\\CaesarCipherEncryptor\\MessageEncryptorEJBModule\\dist\\MessageEncryptorEJBModule.jar
+file.reference.MessageEncryptorWebApplication.war=C:\\Users\\nkamb\\Documents\\NetBeansProjects\\CaesarCipherEncryptor\\MessageEncryptorEJBModule\\dist\\MessageEncryptorEJBModule.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/nkamb/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
 j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
